--- a/testBenchGenerator/View/GeneratorView.xaml
+++ b/testBenchGenerator/View/GeneratorView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:testBenchGenerator.View"
+             xmlns:model="clr-namespace:testBenchGenerator.Model"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1440" Background="White" x:Name="genView">
+    <UserControl.Resources>
+        <model:PolConverter x:Key="PolConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -31,7 +35,7 @@
                                 <ListView.View>
                                     <GridView>
                                         <GridViewColumn Header="Name" Width="150" DisplayMemberBinding="{Binding Name}"/>
-                                        <GridViewColumn Header="Frequency (MHz)" Width="120">
+                                        <GridViewColumn Header="Frequency (MHz)" Width="100">
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
                                                     <TextBox Text="{Binding Frequency, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
@@ -53,10 +57,10 @@
                                 <ListView.View>
                                     <GridView>
                                         <GridViewColumn Header="Name" Width="150" DisplayMemberBinding="{Binding Name}"/>
-                                        <GridViewColumn Header="Polarization" Width="100">
+                                        <GridViewColumn Header="Polarization" Width="80">
                                             <GridViewColumn.CellTemplate>
                                                 <DataTemplate>
-                                                    <TextBox Text="{Binding Polarization, Mode=TwoWay}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
+                                                    <TextBox Text="{Binding Polarization, Converter={StaticResource PolConverter}, Mode=TwoWay}" Width="80" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0"/>
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </GridViewColumn>
@@ -129,29 +133,71 @@
                     <Border DockPanel.Dock="Top" BorderThickness="1" BorderBrush="Black">
                         <StackPanel Orientation="Vertical">
                             <TextBlock Text="Test Cases" FontWeight="Bold" Margin="10,5,0,5"/>
-                            <ListView x:Name="datains" VerticalAlignment="Stretch" ItemsSource="{Binding TestCases}" BorderThickness="0" SelectedItem="{Binding SelectedTestCase}" Height="250">
-                                <ListView.Resources>
+                            <ListView x:Name="datains" VerticalAlignment="Stretch" ItemsSource="{Binding TestCases}" BorderThickness="0" SelectedItem="{Binding SelectedTestCase}" Height="250" PreviewMouseDoubleClick="datains_PreviewMouseDoubleClick">
+                                <!--<ListView.Resources>
                                     <Style TargetType="ListViewItem">
                                         <Setter Property="HorizontalContentAlignment" Value="Center" />
                                     </Style>
-                                </ListView.Resources>
+                                </ListView.Resources>-->
                                 <ListView.View>
                                     <GridView>
-                                        <GridViewColumn Header="Input ports" Width="250" DisplayMemberBinding="{Binding DIs}"/>
-                                        <GridViewColumn Header="Clock sync" Width="100" DisplayMemberBinding="{Binding ClockSync}"/>
-                                        <GridViewColumn Header="Input valid port" Width="150" DisplayMemberBinding="{Binding ValidIn}"/>
-                                        <GridViewColumn Header="Input pattern" Width="200" DisplayMemberBinding="{Binding DataVector}"/>
-                                        <GridViewColumn Header="Valid sequence" Width="200" DisplayMemberBinding="{Binding VldSeq}"/>
-                                        <GridViewColumn Header="Output ports" Width="250" DisplayMemberBinding="{Binding DOs}"/>
-                                        <GridViewColumn Header="Output valid port" Width="150" DisplayMemberBinding="{Binding ValidOut}"/>
+                                        <GridViewColumn Header="Clock sync" Width="100">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding ClockSync}" Width="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding ClockSync}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Input ports" Width="250">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding DIs}" Width="250" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding DIs}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>                                        
+                                        <GridViewColumn Header="Input valid port" Width="150">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding ValidIn}" Width="150" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding ValidIn}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Input pattern" Width="200">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding DataVector}" Width="200" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding DataVector}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Valid sequence" Width="200">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding VldSeq}" Width="200" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding VldSeq}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Output ports" Width="250">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding DOs}" Width="250" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding DOs}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn Header="Output valid port" Width="150">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Margin="5,0" Text="{Binding ValidOut}" Width="150" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ToolTip="{Binding ValidOut}"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
                                     </GridView>
                                 </ListView.View>
                             </ListView>                            
                         </StackPanel>
                     </Border>
                     <StackPanel Orientation="Horizontal" Grid.Column="6" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,10,0,10">
-                        <Button x:Name="add" Content="Add" Click="add_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Margin="0,0,10,0"/>
-                        <Button x:Name="remove" Content="Remove" Click="remove_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="50"/>
+                        <Button x:Name="add" Content="Add" Click="add_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Margin="0,0,10,0" IsEnabled="{Binding CanAdd}"/>
+                        <Button x:Name="remove" Content="Remove" Click="remove_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" IsEnabled="{Binding CanRemove}"/>
                     </StackPanel>
                 </DockPanel>
 
