--- a/testBenchGenerator/View/NewTCView.xaml
+++ b/testBenchGenerator/View/NewTCView.xaml
@@ -76,7 +76,7 @@
                                 <ColumnDefinition Width="50"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="{Binding Name}" Grid.Column="0"/>
-                            <CheckBox Grid.Column="1" IsChecked="{Binding IsSel}"/>
+                            <CheckBox Grid.Column="1" IsChecked="{Binding IsSel}" Checked="CheckBox_Checked"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -105,7 +105,7 @@
                                 <ColumnDefinition Width="50"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="{Binding Name}" Grid.Column="0"/>
-                            <CheckBox Grid.Column="1" IsChecked="{Binding IsSel}"/>
+                            <CheckBox Grid.Column="1" IsChecked="{Binding IsSel}" Checked="CheckBox_Checked"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -115,7 +115,7 @@
         </Grid>     
         
         <StackPanel Orientation="Horizontal" Grid.Column="6" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,30,0">
-            <Button x:Name="add" Content="Add" Click="add_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Margin="0,0,10,0"/>
+            <Button x:Name="add" Content="{Binding AddText}" Click="add_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Margin="0,0,10,0" IsEnabled="{Binding CanSave}"/>
             <Button x:Name="cancel" Content="Cancel" Click="cancel_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50"/>
         </StackPanel>
 
