--- a/testBenchGenerator/MainWindow.xaml
+++ b/testBenchGenerator/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:tbg="clr-namespace:testBenchGenerator"
         xmlns:v="clr-namespace:testBenchGenerator.View"
         mc:Ignorable="d"
-        Title="Testbench Generator" Height="900" Width="1400" WindowStartupLocation="CenterScreen" Icon="icon2.png">
+        Title="Testbench Generator" WindowStartupLocation="CenterScreen" Icon="icon2.png" SizeChanged="Window_SizeChanged">
     <Grid>
         <TabControl Grid.Row="1" x:Name="tab" SelectionChanged="tab_SelectionChanged">
             <TabItem Header="Generator">
