--- a/testBenchGenerator/MainWindow.xaml
+++ b/testBenchGenerator/MainWindow.xaml
@@ -7,17 +7,21 @@
         xmlns:tbg="clr-namespace:testBenchGenerator"
         xmlns:v="clr-namespace:testBenchGenerator.View"
         mc:Ignorable="d"
-        Title="Testbench Generator" WindowStartupLocation="CenterScreen" Icon="ide.ico" SizeChanged="Window_SizeChanged">
+        Title="FPGA Developer Tools" WindowStartupLocation="CenterScreen" Icon="ide.ico" SizeChanged="Window_SizeChanged">
     <Grid>
-        <!--<TabControl Grid.Row="1" x:Name="tab" SelectionChanged="tab_SelectionChanged">
-            <TabItem Header="Generator">-->
-                <v:GeneratorView x:Name="genView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-            <!--</TabItem>
-
-            <TabItem Header="Analyzer">
-                <v:AnalyzerView x:Name="anView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <TabControl Grid.Row="1" x:Name="tab" SelectionChanged="tab_SelectionChanged">
+            <TabItem Header="FIR Designer">
+                <v:FIRView x:Name="firView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             </TabItem>
-        </TabControl>   -->     
+            
+            <TabItem Header="Testbench Generator">
+                <v:GeneratorView x:Name="genView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            </TabItem>
+
+            <!--<TabItem Header="Analyzer">
+                <v:AnalyzerView x:Name="anView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            </TabItem>-->
+        </TabControl>        
 
     </Grid>
 </Window>
