--- a/testBenchGenerator/MainWindow.xaml
+++ b/testBenchGenerator/MainWindow.xaml
@@ -18,9 +18,9 @@
                 <v:GeneratorView x:Name="genView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             </TabItem>
 
-            <!--<TabItem Header="Analyzer">
+            <TabItem Header="Waveform designer &amp; analyzer">
                 <v:AnalyzerView x:Name="anView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-            </TabItem>-->
+            </TabItem>
         </TabControl>        
 
     </Grid>
